<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            tools:context=".Main2Activity"
            android:orientation="vertical"
            android:id="@+id/style">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/box_one"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                style="@style/WhiteBox"
                android:textAppearance="@style/WhiteBox"
                app:layout_constraintDimensionRatio="w,"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.048"
                android:id="@+id/box_one_text"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />

        <TextView
                android:text="@string/box_two"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:id="@+id/box_two_text"
                app:layout_constraintStart_toStartOf="@+id/box_one_text"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/box_one_text"
                style="@style/WhiteBox" />

        <TextView
                android:text="@string/box_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/box_three_text"
                app:layout_constraintBottom_toTopOf="@+id/box_four_text"
                app:layout_constraintTop_toTopOf="@+id/box_two_text"
                app:layout_constraintStart_toEndOf="@+id/box_two_text"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                style="@style/WhiteBox" />

        <TextView
                android:text="@string/box_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/box_four_text"
                app:layout_constraintTop_toBottomOf="@+id/box_three_text"
                app:layout_constraintBottom_toTopOf="@+id/box_five_text"
                app:layout_constraintStart_toEndOf="@+id/box_two_text"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/WhiteBox"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                style="@style/WhiteBox" />

        <TextView
                android:text="@string/box_five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/box_five_text"
                app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
                app:layout_constraintTop_toBottomOf="@+id/box_four_text"
                app:layout_constraintStart_toEndOf="@+id/box_two_text"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/WhiteBox"
                style="@style/WhiteBox" />

        <TextView
                android:text="@string/how_to_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="23sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView11" />

        <TextView
                android:text="@string/play_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/box_two_text"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.193" />

        <Button
                android:text="@string/button_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/button_red"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_red" />

        <Button
                android:text="@string/button_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_red"
                app:layout_constraintStart_toEndOf="@+id/button_black"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/button_green"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        <Button
                android:text="@string/button_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_green"
                app:layout_constraintStart_toEndOf="@+id/button_red"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_red" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>